--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,45 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
-      </div>
-    </div>
-  </div>
+<div class="row">
+  <h3 class="card">{{article.title}}</h3>
+  <h5 class="card-panel articleBody">{{body}}</h5>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<div class="row">
+  <div class="col s2"></div>
+  <form action="/comment/{{article._id}}" method="POST" class="card-panel col s8">
+    <h5>Comment on this Article</h5>
+    <div class="row">
+      <div class="input-field">
+        <i class="material-icons prefix">perm_identity</i>
+        <input id="icon_prefix" type="text" placeholder="Name" name="name" class="validate active">
+      </div>
+
+      <div class="input-field">
+        <i class="material-icons prefix">comment</i>
+        <input id="icon_telephone" type="text" placeholder="Comment" name="comment" class="validate active">
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="input-field">
+        <center><input class="btn add-comment-button topnav" type="submit" value="Submit"></center>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="row">
+  <div class="col s2"></div>
+  <div class="col s8">
+    <h5>Comments:</h5>
+    {{#if article.comment}}
+    {{#each article.comment}}
+    <div class="card">
+      <p id="nameComment">{{name}}</p>
+      <p>{{body}}<p>
+    </div>
+    {{/each}}
+    {{else}}
+    <p>No Comments Yet.</p>
+    {{/if}}
+
+  </div>
+</div>
