scrape working and posting articles

--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -2,8 +2,9 @@
     <div class="nav-wrapper topnav">
         <a href="/" class="brand-logo center">Wall Street Journal US News Scraper</a>
         <ul class="right" id="nav-mobile">
-            <li><a href="/scrape">Scrape</a></li>
-            <li><a href="/clearall">Clear Articles</a></li>
+            <li><a href="/scrape">Scrape New Articles</a></li>
+            <li><a href="/article">Go to Saved Articles</a></li>
         </ul>
+
     </div>
 </nav>
