--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,45 +1,18 @@
-<div class="row">
-  <h3 class="card">{{article.title}}</h3>
-  <h5 class="card-panel articleBody">{{body}}</h5>
-</div>
+<div>
+  <h1 class="card z-depth-3 center-align">Read the lates US news from the Wall Steet Journal</h1>
 
-<div class="row">
-  <div class="col s2"></div>
-  <form action="/comment/{{article._id}}" method="POST" class="card-panel col s8">
-    <h5>Comment on this Article</h5>
-    <div class="row">
-      <div class="input-field">
-        <i class="material-icons prefix">perm_identity</i>
-        <input id="icon_prefix" type="text" placeholder="Name" name="name" class="validate active">
+  <div class="row">
+    {{!-- <div class="col s2"></div> --}}
+    <div class="col s8">
+      {{#each article}}
+      <div class="card-panel">
+        <a href="{{this.link}}" id="btnSignUp">
+          <h4>{{this.title}}</h4>
+        </a>
+        <h5>{{this.summary}}</h5>
+        <button type="button" class="btn btn-success" id="saveArticle" data-id="{{this.id}}" data-saved="{{saved}}">Save
+          Article</button>
       </div>
-
-      <div class="input-field">
-        <i class="material-icons prefix">comment</i>
-        <input id="icon_telephone" type="text" placeholder="Comment" name="comment" class="validate active">
-      </div>
-
+      {{/each}}
     </div>
-    <div class="row">
-      <div class="input-field">
-        <center><input class="btn add-comment-button topnav" type="submit" value="Submit"></center>
-      </div>
-    </div>
-  </form>
-</div>
-<div class="row">
-  <div class="col s2"></div>
-  <div class="col s8">
-    <h5>Comments:</h5>
-    {{#if article.comment}}
-    {{#each article.comment}}
-    <div class="card">
-      <p id="nameComment">{{name}}</p>
-      <p>{{body}}<p>
-    </div>
-    {{/each}}
-    {{else}}
-    <p>No Comments Yet.</p>
-    {{/if}}
-
   </div>
-</div>
