Created Save Article & updated api routes

--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -3,7 +3,7 @@
         <a href="/" class="brand-logo center">Wall Street Journal US News Scraper</a>
         <ul class="right" id="nav-mobile">
             <li><a href="/scrape">Scrape New Articles</a></li>
-            <li><a href="/article">Go to Saved Articles</a></li>
+            <li><a href="/saved">Go to Saved Articles</a></li>
         </ul>
 
     </div>
