--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,7 @@
 <div>
-  <h1 class="card z-depth-3 center-align">Read the lates US news from the Wall Steet Journal</h1>
+  <h1 class="card z-depth-3 center-align">Read the latest US news from the Wall Steet Journal</h1>
 
   <div class="row">
-    {{!-- <div class="col s2"></div> --}}
     <div class="col s8">
       {{#each article}}
       <div class="card-panel">
@@ -10,9 +9,11 @@
           <h4>{{this.title}}</h4>
         </a>
         <h5>{{this.summary}}</h5>
-        <button type="button" class="btn btn-success" id="saveArticle" data-id="{{this.id}}" data-saved="{{saved}}">Save
+        <button class="saveArticle btn btn-success" data-id="{{this.id}}">Save
           Article</button>
       </div>
       {{/each}}
     </div>
   </div>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="/js/app.js"></script>
